Addition to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
+seaborn==0.13.2
 scikit-learn==1.5.1
 scipy==1.14.1
 setuptools==74.1.2
